# cpp-boilerplate

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  build.sh  format.sh  update-cpm.sh
.devcontainer/: Dockerfile  devcontainer.json
myapp/: CMakeLists.txt  main.cpp
myapp/src/: main.cpp
mylib/: CMakeLists.txt
mylib/include/: MyClass.hpp
mylib/src/: MyClass.cpp
src/: MyClass.cpp
test/: CMakeLists.txt  MyClassTest.cpp
